--- a/src/templates/profile-setup.html
+++ b/src/templates/profile-setup.html
@@ -2,58 +2,103 @@
 block main %}
 
 <div
-  class="h-screen flex flex-col justify-center mx-auto max-w-sm space-y-6 sm:max-w-md">
-  <div class="space-y-2 text-center">
-    <h1 class="text-3xl font-bold">Complete your profile</h1>
-    <p class="text-gray-500 dark:text-gray-400">
-      Fill out the form below to set up your profile.
-    </p>
+  class="h-screen flex flex-col justify-center mx-auto max-w-sm space-y-6 sm:max-w-3xl">
+  <h1 class="text-3xl font-bold text-center mb-6">
+    Complete your profile first to proceed
+  </h1>
+
+  <div class="flex flex-col md:flex-row justify-between items-center">
+    <div
+      class="relative mb-12 md:mb-0 w-48 h-48 rounded-full border-4 border-black/60">
+      <img
+        src="{{ image_src }}"
+        alt="User"
+        class="w-full h-full rounded-full object-cover"
+        id="profile-image" />
+      <button
+        title="Set profile picture"
+        class="absolute bottom-2 right-1 bg-slate-950 text-white rounded-full p-2 hover:bg-slate-950/90 focus:outline-none focus:ring-2 focus:ring-slate-950 focus:ring-offset-2"
+        onclick="document.getElementById('fileInput').click()">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="w-5 h-5">
+          <path
+            d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"></path>
+          <circle cx="12" cy="13" r="3"></circle>
+        </svg>
+        <span class="sr-only">Upload new profile picture</span>
+      </button>
+      <input type="file" id="fileInput" style="display: none" />
+    </div>
+    <form
+      class="space-y-6"
+      action="/profile-setup"
+      method="post"
+      enctype="multipart/form-data">
+      <p class="text-gray-500 dark:text-gray-400 text-center">
+        Fill out the form below to set up your profile.
+      </p>
+      <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 sm:gap-6">
+        <div class="space-y-2">
+          <label
+            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+            for="first-name">
+            First name <span class="text-red-600">*</span>
+          </label>
+          <input
+            name="first-name"
+            class="peer flex h-10 w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
+            id="first-name"
+            autofocus
+            required />
+        </div>
+        <div class="space-y-2">
+          <label
+            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+            for="lastname">
+            Last name <span class="text-red-600">*</span>
+          </label>
+          <input
+            id="lastname"
+            name="last-name"
+            required
+            class="peer flex h-10 w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50" />
+        </div>
+      </div>
+      <div class="space-y-2">
+        <label
+          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+          for="middle-name">
+          Middle name <span class="text-gray-400">(optional)</span>
+        </label>
+        <input
+          id="middle-name"
+          name="middle-name"
+          class="peer flex h-10 w-full rounded-md border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50" />
+      </div>
+      <div class="space-y-2">
+        <label
+          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
+          for="password">
+          Set password <span class="text-red-600">*</span>
+        </label>
+        {% include "includes/password-field.html" %}
+      </div>
+      <button
+        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-gray-950 text-white hover:bg-gray-950/90 h-10 px-4 py-2 w-full"
+        type="submit">
+        Save
+      </button>
+    </form>
   </div>
-  <form
-    class="space-y-6"
-    action="/profile-setup"
-    method="post"
-    enctype="multipart/form-data">
-    <div class="space-y-2">
-      <label
-        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-        for="name">
-        Name
-      </label>
-      <input
-        name="name"
-        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
-        id="name"
-        placeholder="Enter your name"
-        autofocus
-        required />
-    </div>
-    <div class="space-y-2">
-      <label
-        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-        for="password">
-        Password
-      </label>
-      {% include "includes/password-field.html" %}
-    </div>
-    <div class="space-y-2">
-      <label
-        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
-        for="profile-picture">
-        Profile picture
-      </label>
-      <input
-        name="profile-picture"
-        class="flex items-center h-10 w-full rounded-md border px-3 text-sm ring-offset-background file:border-0 file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed"
-        id="profile-picture"
-        type="file" />
-    </div>
-    <button
-      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-gray-950 text-white hover:bg-gray-950/90 h-10 px-4 py-2 w-full"
-      type="submit">
-      Save
-    </button>
-  </form>
 </div>
 <script
   type="module"
