--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -7,7 +7,9 @@ main %}
     <div class="relative px-6 py-10">
       <div class="relative flex flex-col items-center py-16">
         <div class="absolute -bottom-28 left-0">
-          <div class="relative w-44 h-44 rounded-full border-4 border-white">
+          <div
+            title="{{name}}"
+            class="relative w-44 h-44 rounded-full border-4 border-white">
             <img
               src="{{ image_src }}"
               alt="{{ name }}"
@@ -17,6 +19,7 @@ main %}
               id="profile-image"
               style="aspect-ratio: 128 / 128; object-fit: cover" />
             <button
+              title="Upload profile"
               class="absolute bottom-2 right-1 bg-slate-950 text-white rounded-full p-2 hover:bg-slate-950/90 focus:outline-none focus:ring-2 focus:ring-slate-950 focus:ring-offset-2"
               onclick="document.getElementById('fileInput').click()">
               <svg
@@ -42,27 +45,57 @@ main %}
       </div>
     </div>
   </div>
-  <div class="mt-12 p-6 flex items-start justify-between">
+  <div id="dynamicField" class="mt-12 p-6 flex items-start justify-between">
     <div data-profile-view class="block">
-      <h2 class="text-3xl font-bold text-slate-950 tracking-tight">
-        {{ name }}
+      <h2
+        title="{{email}}"
+        id="currentUserName"
+        class="text-3xl font-bold text-slate-950 tracking-tight">
+        {{ last_name }}, {{ first_name }} {{ middle_name }}
       </h2>
-      <p class="text-lg font-medium text-slate-950/80">Software Engineer</p>
+      {% if job_title %}
+      <p class="text-lg font-medium text-slate-950/80">{{ job_title }}</p>
+      {% endif %}
     </div>
-    <form data-profile-edit class="hidden space-y-4">
+    <form data-profile-edit class="hidden space-y-4 flex-1 max-w-[250px]">
       <div class="flex flex-col gap-2">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" />
+        <label
+          for="name"
+          class="block text-sm font-medium text-gray-900 dark:text-white"
+          >Name</label
+        >
+        <input
+          type="text"
+          id="name"
+          name="name"
+          class="block w-full p-2 text-gray-900 border border-gray-300 rounded-md bg-gray-50 text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
       </div>
       <div class="flex flex-col gap-2">
-        <label for="job-title">Job title</label>
-        <input type="text" id="job-title" name="job-title" />
+        <label
+          for="job-title"
+          class="block text-sm font-medium text-gray-900 dark:text-white"
+          >Job Title</label
+        >
+        <input
+          type="text"
+          id="job-title"
+          name="job-title"
+          class="block w-full p-2 text-gray-900 border border-gray-300 rounded-md bg-gray-50 text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
       </div>
+      <button
+        type="submit"
+        class="text-white bg-gradient-to-r from-green-400 via-green-400 to-green-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 shadow-md shadow-green-500/50 dark:shadow-lg dark:shadow-green-800/80 font-medium rounded-md text-sm px-6 py-2 text-center">
+        Save
+      </button>
     </form>
     <button
       id="edit-profile"
-      class="py-2 px-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-md border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
-      Edit profile
+      class="relative inline-flex items-center justify-center p-0.5 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-md group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800">
+      <span
+        id="btnInnerText"
+        class="relative px-4 py-2 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+        Edit profile
+      </span>
     </button>
   </div>
 </div>
