--- a/src/templates/includes/dashboard-header.html
+++ b/src/templates/includes/dashboard-header.html
@@ -77,6 +77,7 @@
         data-dropdown-toggle="dropdown">
         <span class="sr-only">Open user menu</span>
         <img
+          id="header-profile"
           class="w-8 h-8 rounded-full"
           src="{{ image_src }}"
           alt="user photo" />
