--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %} {% block title %} Profile {% endblock %} {% block
 main %} {% include "includes/dashboard-header.html" %} {% include
 "includes/dashboard-sidebar.html" %}
-<main
-  class="antialiased bg-gray-50 dark:bg-gray-900 md:ml-60 h-auto pt-14 sm:pt-20">
+<main class="antialiased bg-gray-50 dark:bg-gray-900 md:ml-60 h-auto pt-20">
   <div
     class="grid grid-cols-1 md:px-4 xl:grid-cols-3 xl:gap-4 dark:bg-gray-900">
     <div class="col-span-full xl:col-auto">
@@ -11,39 +10,53 @@ main %} {% include "includes/dashboard-header.html" %} {% include
         <div
           class="items-center sm:flex xl:block 2xl:flex sm:space-x-4 xl:space-x-0 2xl:space-x-4">
           <img
-            class="mb-4 rounded-lg w-28 h-28 sm:mb-0 xl:mb-4 2xl:mb-0"
+            id="profile-image"
+            class="mb-4 rounded-lg w-28 h-28 md:w-40 md:h-[153px] sm:mb-0 xl:mb-4 2xl:mb-0"
             src="{{ image_src }}"
             alt="{{ name }}" />
           <div>
             <h3 class="mb-1 text-xl font-bold text-gray-900 dark:text-white">
               Profile picture
             </h3>
-            <div class="mb-4 text-sm text-gray-500 dark:text-gray-400">
-              JPG, GIF or PNG. Max size of 800K
+            <div class="mb-4 text-xs text-gray-500 dark:text-gray-400">
+              JPG, PNG or WEBP. Max size of 800K
             </div>
             <div class="flex items-center space-x-4">
               <button
                 type="button"
                 id="upload-button"
-                class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 disabled:opacity-70 disabled:pointer-events-none"
                 onclick="document.getElementById('fileInput').click()">
-                <svg
-                  class="w-4 h-4 mr-2 -ml-1"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M5.5 13a3.5 3.5 0 01-.369-6.98 4 4 0 117.753-1.977A4.5 4.5 0 1113.5 13H11V9.413l1.293 1.293a1 1 0 001.414-1.414l-3-3a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L9 9.414V13H5.5z"></path>
-                  <path d="M9 13h2v5a1 1 0 11-2 0v-5z"></path>
-                </svg>
+                <span id="button-svg">
+                  <svg
+                    class="w-4 h-4 mr-2 -ml-1"
+                    fill="currentColor"
+                    viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M5.5 13a3.5 3.5 0 01-.369-6.98 4 4 0 117.753-1.977A4.5 4.5 0 1113.5 13H11V9.413l1.293 1.293a1 1 0 001.414-1.414l-3-3a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L9 9.414V13H5.5z"></path>
+                    <path d="M9 13h2v5a1 1 0 11-2 0v-5z"></path>
+                  </svg>
+                </span>
                 Upload picture
               </button>
               <input type="file" id="fileInput" style="display: none" />
+              {% if image_src == '/static/assets/avatar.png' %}
               <button
+                disabled
+                id="delete-profile"
                 type="button"
-                class="py-2 px-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                class="inline-flex items-center py-2 px-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 disabled:pointer-events-none disabled:opacity-70">
                 Delete
               </button>
+              {% else %}
+              <button
+                id="delete-profile"
+                type="button"
+                class="inline-flex items-center py-2 px-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 disabled:pointer-events-none disabled:opacity-70">
+                Delete
+              </button>
+              {% endif %}
             </div>
           </div>
         </div>
