--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -3,7 +3,7 @@ main %}
 <div class="antialiased bg-gray-50 dark:bg-gray-900">
   {% include "includes/dashboard-header.html" %} {% include
   "includes/dashboard-sidebar.html" %}
-  <main class="p-4 md:ml-60 h-auto pt-20">
+  <main class="p-4 md:ml-60 h-auto pt-[76px]">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
       <div
         class="border-2 border-dashed border-gray-300 rounded-lg dark:border-gray-600 h-32 md:h-64"></div>
