--- a/src/templates/user-profile.html
+++ b/src/templates/user-profile.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block title %} Profile {% endblock %} {% block
 main %} {% include "includes/dashboard-header.html" %} {% include
 "includes/dashboard-sidebar.html" %}
-<main class="antialiased bg-gray-50 dark:bg-gray-900 md:ml-60 h-auto pt-20">
+<main class="antialiased bg-gray-50 dark:bg-gray-900 md:ml-60 h-auto pt-[76px]">
   <div
     class="grid grid-cols-1 md:px-4 xl:grid-cols-3 xl:gap-4 dark:bg-gray-900">
     <div class="col-span-full xl:col-auto">
@@ -11,15 +11,17 @@ main %} {% include "includes/dashboard-header.html" %} {% include
           class="items-center sm:flex xl:block 2xl:flex sm:space-x-4 xl:space-x-0 2xl:space-x-4">
           <img
             id="profile-image"
-            class="mb-4 rounded-lg w-28 h-28 md:w-40 md:h-[153px] sm:mb-0 xl:mb-4 2xl:mb-0"
+            class="mb-4 rounded-lg w-28 h-28 md:w-40 md:h-[148px] sm:mb-0 xl:mb-4 2xl:mb-0"
             src="{{ image_src }}"
             alt="{{ name }}" />
           <div>
             <h3 class="mb-1 text-xl font-bold text-gray-900 dark:text-white">
               Profile picture
             </h3>
-            <div class="mb-4 text-xs text-gray-500 dark:text-gray-400">
-              JPG, PNG or WEBP. Max size of 800K
+            <div
+              class="mb-4 flex flex-col gap-1.5 text-xs text-gray-500 dark:text-gray-400">
+              <span>JPG, PNG or WEBP. Max size of 1MB</span>
+              <span id="file-error" class="text-sm text-red-500"></span>
             </div>
             <div class="flex items-center space-x-4">
               <button
@@ -47,14 +49,14 @@ main %} {% include "includes/dashboard-header.html" %} {% include
                 id="delete-profile"
                 type="button"
                 class="inline-flex items-center py-2 px-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 disabled:pointer-events-none disabled:opacity-70">
-                Delete
+                Remove
               </button>
               {% else %}
               <button
                 id="delete-profile"
                 type="button"
                 class="inline-flex items-center py-2 px-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 disabled:pointer-events-none disabled:opacity-70">
-                Delete
+                Remove
               </button>
               {% endif %}
             </div>
@@ -140,7 +142,7 @@ main %} {% include "includes/dashboard-header.html" %} {% include
       <div
         class="p-4 mb-4 bg-white border border-gray-200 rounded-lg shadow-sm 2xl:col-span-2 dark:border-gray-700 sm:p-6 dark:bg-gray-800">
         <h3 class="mb-4 text-xl font-semibold dark:text-white">
-          Employment information
+          Current employment information
         </h3>
         <form action="#">
           <div class="grid grid-cols-6 gap-6">
